Fixed overflow issue in tool-tip

--- a/src/PatternAddAnAsset/js/components/browse/styles/AssetsStyles.css
+++ b/src/PatternAddAnAsset/js/components/browse/styles/AssetsStyles.css
@@ -165,6 +165,9 @@
     visibility: visible;
 }
 
+:global .pe-tooltip--pTag{
+    word-break: break-all;
+}
 .assetFooter{
     display:  flex;
     flex-flow: column wrap;
